Fixes body height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html,
 body {
   font-family: 'Raleway', sans-serif;
-  height: 100%;
+  min-height: 100%;
 }
 
 #root {
